feat(go): add network status api;
